--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Add this permissions block
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
@@ -14,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.9'
           
       - name: Install build tools
         run: |
